--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="description">description</string>
     <string name="category_count">category count:</string>
     <string name="product_count">product count:</string>
+    <string name="delete">delete</string>
 </resources>
